<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:elevation="8dp"
    android:padding="5dp"
    app:shapeAppearance="@style/buttonGroupCurved">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_button_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/drag_icon"
            android:padding="12dp"
            android:src="@drawable/drag_icon"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_button_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:fontFamily="@font/montserrat_regular"
            android:maxLines="1"
            android:text="@string/button_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_delete_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/delete_button"
            android:src="@drawable/delete_icon" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>