<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/white"
        android:elevation="10dp"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/logo_color_blue"
        app:strokeWidth="2dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/welcome_to_tagboard"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/logo_color_blue"
            android:textSize="26sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_group"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/home_button_background"
        android:drawableLeft="@drawable/hashtag_icon"
        android:drawableTint="@color/white"
        android:text="@string/groups"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/home_button_background"
        android:drawableLeft="@drawable/settings_icon"
        android:drawableTint="@color/white"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@null" />


</RelativeLayout>