<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:elevation="8dp"
    android:padding="5dp"
    app:shapeAppearance="@style/buttonGroupCurved">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/logo_color_light"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/hashtag_icon"
            android:padding="8dp"
            android:src="@drawable/hashtag_icon"
            app:tint="@color/logo_color_blue" />

        <TextView
            android:id="@+id/tv_hashtag_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:fontFamily="@font/montserrat_regular"
            android:maxLines="1"
            android:text="@string/hashtag"
            android:textColor="@color/logo_color_blue"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_delete_hashtag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/delete_button"
            android:src="@drawable/delete_icon" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>