<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_alignParentBottom="true"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/linear_settings_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/tag_seekbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="5"
            android:background="@color/transparent"
            android:backgroundTint="@color/white"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/logo_color_blue"
            android:thumbTint="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_regular"
            android:text="0 Tags"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings_icon" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/keyboard"
            android:src="@drawable/keyboard_layout_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_settings_buttons"
        android:layout_marginTop="5dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <!-- <GridLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_weight="6"
             android:columnCount="2"
             android:rowCount="2">

             <Button
                 android:id="@+id/button1"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@string/button_name" />

             <Button
                 android:id="@+id/button2"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@string/button_name" />

             <Button
                 android:id="@+id/button3"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@string/button_name" />

             <Button
                 android:id="@+id/button4"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@string/button_name" />

             <Button
                 android:id="@+id/button5"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@string/button_name" />

             <Button
                 android:id="@+id/button6"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@string/button_name" />

             <Button
                 android:id="@+id/button7"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@string/button_name" />

             <Button
                 android:id="@+id/button8"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@string/button_name" />

         </GridLayout>-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/buttons_keyboard_rv"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:layout_weight="6"
            android:paddingStart="5dp"
            android:paddingEnd="0dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="10dp">

            <ImageButton
                android:id="@+id/btn_backspace"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/backspace"
                android:src="@drawable/delete_key_icon"
                app:tint="@color/white"
                tools:ignore="NestedWeights" />

            <ImageButton
                android:id="@+id/btn_enter_next_line"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/enter_button_bg"
                android:contentDescription="@string/enter"
                android:src="@drawable/enter_key_icon"
                app:tint="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <!-- <android.inputmethodservice.KeyboardView
         android:id="@+id/keyboard_view_under_relative"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/recycler_view_container"
         android:layout_alignParentBottom="true" />-->

</RelativeLayout>